# chatbot_backend_rust

./: Cargo.toml
api/: openapi.yaml
src/: domain.rs
src/domain/: entities.rs  repositories.rs
src/domain/entities/: conversation.rs  id.rs  message.rs  user.rs
src/domain/repositories/: conversation.rs  errors.rs  message.rs
src/infrastructure/: firestore.rs
src/infrastructure/firestore/: client.rs  conversation.rs
